# cursor_gui_patch

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cursor-compat.yml  release.yml  tests.yml
cursor_gui_patch/: __main__.py  auto_extension.py  backup.py  cache.py  cli.py  codesign.py  discovery.py  github_release.py  macos_app_snapshot.py  macos_privacy.py  patching.py  report.py  update.py
cursor_gui_patch/patches/: __init__.py  autorun.py  autorun_workbench.py  base.py  models.py
docs/: cursor_compatibility.md
scripts/: build_linux_binary_docker.sh  cursor_compat_runner.py  cursor_compat_sync.py  cursor_release_info.sh  cursor_tested_versions.txt  install_cgp.ps1  install_cgp.sh  patch.ps1  patch.sh  post_build.py  unpatch.ps1  unpatch.sh
tests/: test_auto_extension.py  test_backup.py  test_cache.py  test_cli.py  test_codesign.py  test_codesign_integration.py  test_cursor_compat_sync.py  test_cursor_compat_workflow.py  test_discovery.py  test_github_release.py  test_hot_patch_regression.py  test_install_script.py  test_macos_app_snapshot.py  test_macos_app_snapshot_integration.py  test_macos_privacy.py  test_macos_privacy_integration.py  test_patch_script_text.py  test_patches_autorun.py  test_patches_autorun_workbench.py  test_patches_models.py  test_patching.py  test_release_workflow.py  test_report.py  test_scripts_permissions.py  test_tests_workflow.py  test_unpatch_script_runtime.py  test_unpatch_script_text.py  test_update.py  test_version_metadata.py  test_windows_discovery_integration.py
